<resources>
    <string name="app_name">Hello</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="btn">Transform</string>
    <string name="show">Please input</string>
    <string name="out">outPut:</string>
    <string name="btn_dollar">Dollar</string>
    <string name="btn_euro">Euro</string>
    <string name="btn_won">Won</string>
    <string name="btn_open">OpenConfig</string>
    <string name="btn_save">Save</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="dollar_hint" translatable="false"></string>
    <string name="euro_hint" translatable="false"></string>
    <string name="won_hint" translatable="false"></string>
    <string name="label_open_list">OpenList</string>
</resources>
